--- a/You-Tube.html
+++ b/You-Tube.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="autor" content="Pablo Mateus de Melo">
     <title>|You Tube Clone</title>
     <link rel="stylesheet" href="css-externo/you-tube.css" />
 
